WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
24223
CSS downloads all background images related to element, instead of just final rule
https://bugs.webkit.org/show_bug.cgi?id=24223
Summary
CSS downloads all background images related to element, instead of just final...
Lee Powell
Reported
2009-02-27 04:19:22 PST
When an element is given a background image, that is later over ruled with another background image later on in the css cascade, webkit downloads both images. Check the link for an example, and then view the Resources in the Inspector panel.
Attachments
Mostly complete patch
(36.78 KB, patch)
2010-08-25 22:48 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Patch
(41.47 KB, patch)
2010-08-26 14:57 PDT
,
Simon Fraser (smfr)
hyatt
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2010-02-14 14:26:42 PST
***
Bug 31630
has been marked as a duplicate of this bug. ***
Andy Hume
Comment 2
2010-08-10 18:02:17 PDT
This seems to have been fixed in or before
r65052
?
Simon Fraser (smfr)
Comment 3
2010-08-25 12:25:38 PDT
No, this still happens if the two images are referred to by different rule blocks.
Simon Fraser (smfr)
Comment 4
2010-08-25 12:27:41 PDT
<
rdar://problem/8354391
>
Simon Fraser (smfr)
Comment 5
2010-08-25 22:48:27 PDT
Created
attachment 65526
[details]
Mostly complete patch This patch works pretty well, but breaks one test: fast/css-generated-content/after-order.html
Simon Fraser (smfr)
Comment 6
2010-08-26 14:57:05 PDT
Created
attachment 65622
[details]
Patch
WebKit Review Bot
Comment 7
2010-08-26 14:58:55 PDT
Attachment 65622
[details]
did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style']" exit_code: 1 WebCore/css/CSSStyleSelector.cpp:6725: A case label should not be indented, but line up with its switch statement. [whitespace/indent] [4] Total errors found: 1 in 22 files If any of these errors are false positives, please file a bug against check-webkit-style.
Dave Hyatt
Comment 8
2010-08-26 15:10:53 PDT
Comment on
attachment 65622
[details]
Patch r=me
Simon Fraser (smfr)
Comment 9
2010-08-26 15:17:30 PDT
http://trac.webkit.org/changeset/66141
Ryosuke Niwa
Comment 10
2010-08-26 17:16:49 PDT
http://trac.webkit.org/changeset/66141
seems to have caused fast/forms/select-style.html to fail on mac: @@ -56,10 +56,10 @@ RenderText {#text} at (0,160) size 498x18 text run at (0,160) width 498: "This tests that background is white if only background-image:none is specified." RenderBR {BR} at (498,174) size 0x0 - RenderMenuList {SELECT} at (2,180) size 51x18 [bgcolor=#FFFFFF] - RenderBlock (anonymous) at (0,0) size 51x18 - RenderText at (8,2) size 20x13 - text run at (8,2) width 20: "test" + RenderMenuList {SELECT} at (2,180) size 51x18 [bgcolor=#FFFFFF] [border: (1px solid #000000)] + RenderBlock (anonymous) at (1,1) size 49x16 + RenderText at (8,1) size 20x13 + text run at (8,1) width 20: "test" RenderText {#text} at (55,179) size 4x18 text run at (55,179) width 4: " " RenderBR {BR} at (59,193) size 0x0
Simon Fraser (smfr)
Comment 11
2010-08-26 17:44:28 PDT
I filed
bug 44737
to investigate the test breakage.
Alexey Proskuryakov
Comment 12
2011-01-20 22:28:22 PST
***
Bug 52847
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug